tests/outref/TCF017.ref

-- TCF017 : OCTO345 : Single error output for nested erroneous function calls

CREATE FUNCTION LENGTH(VARCHAR) RETURNS INTEGER AS $$^LENGTH;

SELECT ABS(ABS(1, 2)) FROM names;
SELECT ABS(ABS(ABS(1, 2))) FROM names;

SELECT LENGTH(LENGTH(1, 2)) FROM names;
SELECT LENGTH(LENGTH(LENGTH(1, 2))) FROM names;

[ERROR] PATH:LINENUM DATE TIME : Invalid number of arguments to function ABS: expected 1 got 2)
Error with syntax near (line 1, column 16):

SELECT ABS(ABS(1, 2)) FROM names;
               ^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT ABS(ABS(1, 2)) FROM names;
[ERROR] PATH:LINENUM DATE TIME : Invalid number of arguments to function ABS: expected 1 got 2)
Error with syntax near (line 1, column 20):

SELECT ABS(ABS(ABS(1, 2))) FROM names;
                   ^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT ABS(ABS(ABS(1, 2))) FROM names;
[ERROR] PATH:LINENUM DATE TIME : Parameter type mismatch in function 'LENGTH': expected VARCHAR, got NUMERIC
Error with syntax near (line 1, column 22):

SELECT LENGTH(LENGTH(1, 2)) FROM names;
                     ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT LENGTH(LENGTH(1, 2)) FROM names;
[ERROR] PATH:LINENUM DATE TIME : Parameter type mismatch in function 'LENGTH': expected VARCHAR, got NUMERIC
Error with syntax near (line 1, column 29):

SELECT LENGTH(LENGTH(LENGTH(1, 2))) FROM names;
                            ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT LENGTH(LENGTH(LENGTH(1, 2))) FROM names;

